--- a/client/styles/offer-ty.css
+++ b/client/styles/offer-ty.css
@@ -3079,6 +3079,7 @@ img {
     opacity: 0.75;
     font-style: italic;
     text-align: center;
+        color: #d2d2d2;
 }
 
 .pricing-justification {
