--- a/client/styles/offer-ty.css
+++ b/client/styles/offer-ty.css
@@ -3089,6 +3089,7 @@ img {
     opacity: 0.75;
     font-style: italic;
     text-align: center;
+            color: #d2d2d2;
 }
 
 /* FAQ Section Styles */
@@ -3891,7 +3892,7 @@ body.modal-open .floating-cta {
 }
 
 .rating-summary__link:hover {
-    color: #90c5ff;
+    color: #1f7f0b;
 }
 
 .rating-summary__reassurance {
@@ -4796,7 +4797,7 @@ body.modal-open .floating-cta {
 
 .promo-strip__meta-value {
     font: 800 1rem "Poppins", sans-serif;
-    color: #77a6f3;
+    color: #39ff14;
     letter-spacing: .12em;
     text-transform: uppercase;
 }
@@ -4834,7 +4835,7 @@ body.modal-open .floating-cta {
 
 .promo-strip__timer-value {
     font: 800 1.1rem "Poppins", sans-serif;
-    color: #4485f5;
+    color: #39ff14;
     letter-spacing: 0.04em;
 }
 
