--- a/client/styles/workout-tracker-ty.css
+++ b/client/styles/workout-tracker-ty.css
@@ -1396,8 +1396,7 @@ body.xp-cap #stickyXpBarFill {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #dadada;
-  color: #050505;
+  color: #e5e5e5;
   z-index: 1100;
   font-family: 'Poppins', sans-serif;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2) !important;
@@ -1423,6 +1422,7 @@ body.xp-cap #stickyXpBarFill {
   font-weight: bold;
   height: 60px;
   margin: 0;
+  color: #e5e5e5;
 }
 
 .timer-adjustments-inline {
@@ -1625,7 +1625,7 @@ body.xp-cap #stickyXpBarFill {
 #restTimer button {
   background: transparent;
   border: none;
-  color: #050505;
+  color: #e5e5e5;
   font-size: 1.2rem;
   cursor: pointer;
   padding: 2px 6px;
@@ -1645,6 +1645,7 @@ body.xp-cap #stickyXpBarFill {
   /* same height as your timer row */
   padding: 0 10px;
   /* optional horizontal padding */
+  background-color: #050505;
 }
 
 /* Each subsection can be flex as well if needed */
