--- a/client/styles/forms-vital.css
+++ b/client/styles/forms-vital.css
@@ -66,8 +66,38 @@ h6 {
 
 .header {
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 10px 10px 15px 10px;
+}
+
+.header .logo {
+  grid-column: 2;
+  justify-self: center;
+}
+
+.login-link {
+  grid-column: 3;
+  justify-self: end;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: var(--brand-ivory);
+  text-decoration: none;
+  padding-left: 10px;
   text-align: center;
-  padding: 10px 15px 15px 15px;
+}
+
+.login-link:hover,
+.login-link:focus {
+  text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  .login-link {
+    font-size: 0.75rem;
+  }
 }
 
 
